@@ -5,7 +5,7 @@ rsyncdirs = devpi testing
 rsyncignore = .tox
 
 [tox]
-envlist = version,py27,pytest26,pytest33,autoserver
+envlist = version,py27,autoserver
 
 
 [testenv]
@@ -22,14 +22,6 @@ deps =
 
 commands = devpi --version
 
-[testenv:pytest26]
-basepython=python2.6
-commands = py.test testing/test_pytestdevpi.py
-
-[testenv:pytest33]
-basepython=python3.3
-commands = py.test testing/test_pytestdevpi.py
-
 [testenv:autoserver]
 deps = devpi-server
 setenv =
@@ -45,5 +37,3 @@ commands =
     virtualenv newenv
     devpi --clientdir={envtmpdir} install --venv=newenv pytest
     devpi --clientdir={envtmpdir} server --stop
-
-    
